# MyRasterizer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  ChannelImage.cpp  ChannelImage.h  DepthBuffer.cpp  DepthBuffer.h  Light.cpp  Light.h  Matrix.cpp  Matrix.h  MeshObject.cpp  MeshObject.h  ObjectLoader.cpp  ObjectLoader.h  ParallelLight.cpp  ParallelLight.h  PointLight.cpp  PointLight.h  RGBRasterizedImage.cpp  RGBRasterizedImage.h  ResidualMat.cpp  ResidualMat.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h  Vector.cpp  Vector.h  Vertex.cpp  Vertex.h  main.cpp  mr_tookit.cpp  mr_tookit.h  readme.md
include/: OBJ_loader.hpp  camera.hpp  image.hpp  light.hpp  mesh.hpp  parallel_light.hpp  scene.hpp  stb_image_write.hpp  utils.hpp
model/: box_stack.mtl
src/: OBJ_loader.cpp  camera.cpp  image.cpp  main.cpp  mesh.cpp  parallel_light.cpp  scene.cpp  stb_image_write.cpp  utils.cpp
